Archive2/29/ea3de92326690b/output
main.cpp: In instantiation of 'struct variant<>':
main.cpp:7:15:   required from here
main.cpp:3:5: error: static assertion failed: empty variant is illegal
     static_assert(sizeof...(bounded_types) > 0, "empty variant is illegal");
     ^
main.cpp: In function 'int main()':
main.cpp:7:15: warning: unused variable 'x' [-Wunused-variable]
     variant<> x;
               ^
